--- a/download.html
+++ b/download.html
@@ -7,292 +7,195 @@
 
 <style>
 :root{
-  --pw-purple:#5b2bd6;
-  --pw-purple-dark:#4a21b8;
-  --pw-yellow:#ffcf00;
+  --pw:#5b2bd6;
+  --pw-dark:#4a21b8;
+  --yellow:#ffcf00;
   --bg:#f6f7fb;
-  --text:#2b2b2b;
 }
-
-*{box-sizing:border-box}
-
 body{
   margin:0;
   background:var(--bg);
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  color:var(--text);
+  font-family:system-ui,Segoe UI,Arial;
 }
-
 .wrapper{
   max-width:420px;
-  margin:32px auto;
+  margin:30px auto;
   padding:0 14px;
 }
-
 .card{
   background:#fff;
   border-radius:18px;
-  box-shadow:0 12px 30px rgba(0,0,0,.08);
-  padding:22px 18px 26px;
+  box-shadow:0 10px 25px rgba(0,0,0,.08);
+  padding:20px;
 }
-
-/* Header */
-.brand{
-  display:flex;
-  align-items:center;
-  gap:10px;
-  margin-bottom:10px;
-}
-.logo{
-  width:38px;height:38px;
-  border-radius:10px;
-  background:linear-gradient(135deg,var(--pw-purple),var(--pw-purple-dark));
-  display:grid;place-items:center;
-  color:#fff;font-weight:800;
-}
-.title{font-size:20px;font-weight:800;color:var(--pw-purple)}
-.subtitle{font-size:13px;color:#666;margin-bottom:16px}
-
-/* Inputs */
+h2{color:var(--pw);margin:0 0 6px}
+.sub{color:#666;font-size:13px;margin-bottom:14px}
 input{
   width:100%;
-  padding:12px 14px;
+  padding:12px;
   border-radius:12px;
-  border:1.5px solid #e5e7eb;
-  font-size:15px;
+  border:1.5px solid #ddd;
 }
-input:focus{border-color:var(--pw-purple);outline:none}
-
-.btn{
+button{
   width:100%;
-  margin-top:14px;
+  margin-top:12px;
   padding:12px;
   border:none;
   border-radius:14px;
-  background:var(--pw-purple);
+  background:var(--pw);
   color:#fff;
   font-size:16px;
   font-weight:700;
-  cursor:pointer;
 }
-.btn:active{background:var(--pw-purple-dark)}
-
-.hint{margin-top:10px;font-size:12px;color:#555;line-height:1.5}
-.hint b{color:var(--pw-purple)}
-.error{margin-top:8px;font-size:13px;color:#d32f2f}
-.attempts{margin-top:4px;font-size:12px;color:#777}
-
-/* Content */
-#content{display:none}
-.badge{
-  display:inline-block;
-  background:rgba(91,43,214,.08);
-  color:var(--pw-purple);
-  padding:6px 10px;
-  border-radius:999px;
+.hint{
   font-size:12px;
-  font-weight:700;
-  margin-bottom:10px;
+  margin-top:8px;
+  color:#555;
 }
+.error{color:#d32f2f;font-size:13px;margin-top:6px}
+#content{display:none}
 .timer{
   background:#fff7cc;
-  border:1px dashed var(--pw-yellow);
-  color:#7a5a00;
+  border:1px dashed var(--yellow);
   padding:10px;
   border-radius:12px;
-  font-weight:700;
   text-align:center;
+  font-weight:700;
   margin-bottom:12px;
 }
-.section-title{
-  color:var(--pw-purple);
-  font-weight:800;
-  margin:18px 0 8px;
-}
-
-/* Video */
 iframe{
   width:100%;
   height:220px;
   border-radius:14px;
-  border:1px solid #e5e7eb;
+  border:1px solid #ddd;
 }
-
-/* APK Button */
 .apk-btn{
   display:block;
-  margin-top:12px;
+  margin-top:14px;
   padding:14px;
+  text-align:center;
   border-radius:14px;
   background:linear-gradient(135deg,#ff9800,#ffcf00);
   color:#3b2a00;
   font-weight:800;
-  text-align:center;
   text-decoration:none;
 }
-
-/* Instructions */
-ol{
-  font-size:13px;
-  color:#444;
-  padding-left:18px;
-}
-ol li{margin-bottom:6px}
-
-/* History */
-ul{list-style:none;padding:0;margin:8px 0 0;font-size:13px}
-ul li{padding:6px 0;border-bottom:1px dashed #e5e7eb}
+.section{margin-top:18px}
 </style>
 </head>
 
 <body>
-
 <div class="wrapper">
 <div class="card">
 
-<!-- 🔐 PASSWORD -->
-<div id="passwordBox">
-  <div class="brand">
-    <div class="logo">PW</div>
-    <div>
-      <div class="title">Secure Login</div>
-      <div class="subtitle">PhysicsWallah style access</div>
-    </div>
-  </div>
+<!-- WEBSITE LOGIN -->
+<div id="siteBox">
+  <h2>Website Login</h2>
+  <div class="sub">PhysicsWallah style secure access</div>
 
-  <input type="password" id="passInput" placeholder="Enter today’s password">
-  <button class="btn" onclick="checkPassword()">Continue</button>
+  <input type="password" id="sitePass" placeholder="Enter website password">
+  <button onclick="checkSite()">Continue</button>
 
-  <!-- PASSWORD HINT -->
   <div class="hint">
-    💡 <b>Password Hint</b><br>
     Format: <b>RS@DDMMYYYY</b><br>
-    Today example: <b id="todayHint"></b>
+    Today: <b id="siteHint"></b>
   </div>
-
-  <div id="error" class="error"></div>
-  <div id="attemptsInfo" class="attempts"></div>
+  <div id="siteErr" class="error"></div>
 </div>
 
-<!-- ✅ CONTENT -->
+<!-- WEBSITE CONTENT -->
 <div id="content">
-  <span class="badge">ACCESS ACTIVE</span>
-  <div class="timer" id="timer"></div>
+  <div class="timer" id="siteTimer"></div>
 
-  <!-- 🎥 VIDEO -->
-  <div class="section-title">🎥 Video Guide</div>
-  <iframe
-    src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"
-    allowfullscreen>
-  </iframe>
+  <div class="section">
+    <h2>Video Guide</h2>
+    <iframe src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"></iframe>
+  </div>
 
-  <!-- 📦 APK -->
-  <div class="section-title">📦 Download Application</div>
-  <a class="apk-btn"
+  <div class="section">
+    <h2>Download Application</h2>
+    <button onclick="openApkBox()">⬇ Download APK</button>
+  </div>
+</div>
+
+<!-- APK PASSWORD -->
+<div id="apkBox" style="display:none">
+  <h2>APK Password</h2>
+  <input type="password" id="apkPass" placeholder="Enter APK password">
+  <button onclick="checkApk()">Unlock Download</button>
+
+  <div class="hint">
+    Format: <b>APK@DDMMYYYY</b><br>
+    Today: <b id="apkHint"></b>
+  </div>
+  <div id="apkErr" class="error"></div>
+
+  <a id="apkLink" class="apk-btn" style="display:none"
      href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH"
      target="_blank">
      ⬇ Download APK
   </a>
-
-  <!-- 📌 INSTRUCTIONS -->
-  <div class="section-title">📌 Important Instructions</div>
-  <ol>
-    <li>Turn OFF Private / Custom DNS in phone settings.</li>
-    <li>Use Chrome or Opera Mini (Opera Mini = fewer ads).</li>
-    <li>If ads open, press BACK once and continue.</li>
-    <li>If website does not open, turn ON VPN.</li>
-    <li>Laptop users: VPN + Ad-Blocker recommended.</li>
-    <li>Password changes automatically every 24 hours.</li>
-  </ol>
-
-  <!-- 🧾 HISTORY -->
-  <div class="section-title">🧾 Login History (Last 5)</div>
-  <ul id="loginHistory"></ul>
 </div>
 
 </div>
 </div>
 
 <script>
-const VALID_TIME = 24*60*60*1000;
-const MAX_ATTEMPTS = 5;
+/* ===== PASSWORDS ===== */
+function today(){const d=new Date();
+return String(d.getDate()).padStart(2,"0")+
+String(d.getMonth()+1).padStart(2,"0")+d.getFullYear();}
 
-function getTodayPassword(){
-  const d=new Date();
-  return "RS@"+String(d.getDate()).padStart(2,"0")
-        +String(d.getMonth()+1).padStart(2,"0")
-        +d.getFullYear();
-}
-document.getElementById("todayHint").innerText = getTodayPassword();
+const SITE_PASS="RS@"+today();
+const APK_PASS="APK@"+today();
 
-let attempts = Number(localStorage.getItem("attempts")) || 0;
+siteHint.innerText=SITE_PASS;
+apkHint.innerText=APK_PASS;
 
-function checkPassword(){
-  if(attempts>=MAX_ATTEMPTS){
-    error.innerText="Too many wrong attempts. Try tomorrow.";
-    return;
+/* ===== ATTEMPTS (LOW) ===== */
+let siteTry=Number(localStorage.getItem("siteTry"))||0; // max 3
+let apkTry=Number(localStorage.getItem("apkTry"))||0;   // max 2
+
+/* ===== WEBSITE LOGIN ===== */
+function checkSite(){
+  if(siteTry>=3){siteErr.innerText="Too many attempts. Try tomorrow.";return;}
+  if(sitePass.value!==SITE_PASS){
+    siteTry++;localStorage.setItem("siteTry",siteTry);
+    siteErr.innerText="Wrong password";return;
   }
-  if(passInput.value!==getTodayPassword()){
-    attempts++;
-    localStorage.setItem("attempts",attempts);
-    error.innerText="Wrong password";
-    attemptsInfo.innerText="Attempts left: "+(MAX_ATTEMPTS-attempts);
-    return;
-  }
-  localStorage.removeItem("attempts");
-
-  if(localStorage.getItem("passwordDate")!==getTodayPassword()){
-    localStorage.setItem("passwordDate",getTodayPassword());
-    localStorage.setItem("timerStart",Date.now());
-  }
-  addHistory();
-  showContent();
-}
-
-function showContent(){
-  passwordBox.style.display="none";
+  siteBox.style.display="none";
   content.style.display="block";
   startTimer();
-  renderHistory();
 }
 
+/* ===== TIMER ===== */
 function startTimer(){
-  const start=Number(localStorage.getItem("timerStart"));
+  if(!localStorage.getItem("start"))
+    localStorage.setItem("start",Date.now());
+
   setInterval(()=>{
-    const left=VALID_TIME-(Date.now()-start);
-    if(left<=0){
-      localStorage.removeItem("passwordDate");
-      localStorage.removeItem("timerStart");
-      location.reload();
-      return;
-    }
-    const h=Math.floor(left/3600000);
-    const m=Math.floor((left%3600000)/60000);
-    const s=Math.floor((left%60000)/1000);
-    timer.innerText=`Time left: ${h}h ${m}m ${s}s`;
+    const left=86400000-(Date.now()-localStorage.getItem("start"));
+    if(left<=0){localStorage.clear();location.reload();}
+    const h=Math.floor(left/3600000),
+          m=Math.floor((left%3600000)/60000),
+          s=Math.floor((left%60000)/1000);
+    siteTimer.innerText=`Time left: ${h}h ${m}m ${s}s`;
   },1000);
 }
 
-function addHistory(){
-  let h=JSON.parse(localStorage.getItem("loginHistory"))||[];
-  h.unshift(new Date().toLocaleString("en-IN"));
-  h=h.slice(0,5);
-  localStorage.setItem("loginHistory",JSON.stringify(h));
+/* ===== APK PASSWORD ===== */
+function openApkBox(){
+  apkBox.style.display="block";
 }
-function renderHistory(){
-  const h=JSON.parse(localStorage.getItem("loginHistory"))||[];
-  loginHistory.innerHTML=h.length?h.map(x=>`<li>${x}</li>`).join(""):"<li>No logins yet</li>";
-}
-
-window.onload=function(){
-  passwordBox.style.display="block";
-  content.style.display="none";
-  attemptsInfo.innerText="Attempts left: "+(MAX_ATTEMPTS-attempts);
-  if(localStorage.getItem("passwordDate")===getTodayPassword()){
-    showContent();
+function checkApk(){
+  if(apkTry>=2){apkErr.innerText="Too many attempts.";return;}
+  if(apkPass.value!==APK_PASS){
+    apkTry++;localStorage.setItem("apkTry",apkTry);
+    apkErr.innerText="Wrong APK password";return;
   }
-};
+  apkLink.style.display="block";
+}
 </script>
 
 </body>
-  </html>
+    </html>
